# raspberry-pico-w-ili9225-c-library

./: .gitignore  CMakeLists.txt  LOGGING.md  README.md
examples/: example_with_logging.c
simulator/: CMAKE_USAGE.md  CMakeLists.txt  DISPLAY_ORIENTATION_FIX.md  FONT_FIX.md  Makefile  README.md  USAGE.md  analyze_font.py  debug_font  debug_font.c  ili9225_mock.c  ili9225_mock.h  requirements-web.txt  run_web.sh  test_fixed_font.py  test_font_width  test_font_width.c  test_real_ili9225.c  test_vertical_flip.py  verify_font_fix.c  visualize_text.py  web_simulator.py
simulator/hardware/: gpio.h  spi.h
simulator/pico/: stdlib.h
simulator/templates/: index.html
src/: ili9225.c  ili9225.h  ili9225_defs.h
src/fonts/: fonts.h  gfx_fonts.h  terminal6x8.h
src/utilities/: LOG_USAGE.md  README.md  log.c  log.h  utils.h
ui/: ili9225_176x220.html
